# cora

./: .gitattributes  .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  versioneer.py
.github/workflows/: main.yaml  main.yml  sphinx.yaml  sphinx.yml
cora/: __init__.py  _version.py
cora/core/: __init__.py  containers.py  gaussianfield.py  maps.py  skysim.py
cora/foreground/: __init__.py  galaxy.py  gaussianfg.py  lofar.py  pointsource.py  poisson.py
cora/foreground/data/: catalogue_match.ipynb
cora/scripts/: __init__.py  makesky.py
cora/signal/: __init__.py  corr.py  corr21cm.py  corrfunc.py  lss.py  lsscontainers.py  lssmodels.py  lssutil.py
cora/signal/data/: generate_powerspectra.py  ps_cora-orig.h5  ps_planck2018_z1.0_halofit-mead-feedback.h5  ps_planck2018_z1.0_halofit-mead.h5  ps_planck2018_z1.0_halofit-original.h5  ps_planck2018_z1.0_halofit-takahashi.h5  ps_planck2018_z1.0_linear.h5
cora/util/: __init__.py  bilinearmap.c  bilinearmap.pyx  coord.c  coord.py  coord.pyx  cosmology.py  cubicspline.c  cubicspline.pyx  fftutil.py  halomodel.py  hputil.py  nputil.py  pmesh.c  pmesh.pyx  pmesh_util.c  setup.py  sphbessel.py  sphfunc.py  trilinearmap.pyx  units.py
cora/util/.chebyshev/: wi_list.npz  xi_list.npz
cosmoutils/: _chebyshev.py  _patterson.py  _romberg.py  _sphbessel_c.pyx  coord.py  cosmology.py  cubicspline.pyx  fftutil.py  hputil.py  integrate.py  nputil.py  radialprofile.py  setup.py  sphbessel.py  trilinearmap.pyx  units.py
doc/: Makefile  conf.py  coord.rst  cosmology.rst  hputil.rst  index.rst  reference.rst  requirements.txt  simulation.rst
doc/_autosummary/: cora.foreground.galaxy.rst  cora.foreground.gaussianfg.rst  cora.foreground.lofar.rst  cora.foreground.poisson.rst  cora.foreground.rst  cora.scripts.makesky.rst  cora.scripts.rst  cora.signal.corr.rst  cora.signal.corr21cm.rst  cora.signal.rst  cora.util.cubicspline.rst  cora.util.fftutil.rst  cora.util.nputil.rst  cora.util.units.rst
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  simulation.html
docs/.doctrees/: environment.pickle  index.doctree  reference.doctree  simulation.doctree
docs/.doctrees/_autosummary/: cora.core.doctree  cora.core.gaussianfield.doctree  cora.core.maps.doctree  cora.core.skysim.doctree  cora.foreground.doctree  cora.util.doctree  (+19 more)
docs/_autosummary/: cora.core.gaussianfield.html  cora.core.html  cora.core.maps.html  cora.core.skysim.html  cora.foreground.galaxy.html  cora.foreground.gaussianfg.html  cora.foreground.html  cora.foreground.lofar.html  cora.foreground.pointsource.html  cora.foreground.poisson.html  cora.scripts.html  cora.scripts.makesky.html  cora.signal.corr.html  cora.signal.corr21cm.html  cora.signal.html  cora.util.bilinearmap.html  cora.util.coord.html  cora.util.cosmology.html  cora.util.cubicspline.html  cora.util.fftutil.html  cora.util.hputil.html  cora.util.html  cora.util.nputil.html  cora.util.sphfunc.html  cora.util.units.html
docs/_sources/: index.rst.txt  simulation.rst.txt
docs/_static/: documentation_options.js
scripts/: cora-makesky  mk_sky_21cm.py  mk_sky_foregrounds.py  mk_sky_foregrounds_gaussian.py  mk_sky_galaxy.py
simulations/: README.rst  corr.py  corr21cm.py  foregroundmap.py  foregroundsck.py  galaxy.py  gaussianfield.py  lofar.py  maps.py  pointsource.py  poisson.py  ps_estimation.py  skysim.py
simulations/data/: fetchdata.sh  spectral.hdf5
simulations/scripts/: fmtest.py  pstest.py  testsck.py  testsim.py
tests/: test_corr.py  test_cubicspline.py  test_maps.py  test_poisson.py
(+22 files in other folders)
