[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "setuptools-git-versioning",
    "cython",
    "numpy>=2.0.0rc1",
]
build-backend = "setuptools.build_meta"

[project]
name = "cora"
description = "Simulation and modelling of low frequency radio skies"
license = { file = "LICENSE" }
authors = [
    { name = "The CHIME Collaboration", email = "lgray@phas.ubc.ca" }
]
maintainers = [
    { name = "Liam Gray", email = "lgray@phas.ubc.ca" },
    { name = "Don Wiebe", email = "dvw@phas.ubc.ca" }
]
dynamic = ["readme", "version"]
requires-python = ">=3.10"
dependencies = [
    "caput[complete] @ git+https://github.com/radiocosmology/caput.git",
    "click",
    "cython",
    "h5py",
    "healpy>=1.17",
    "numpy>=1.24",
    "scipy>=1.13",
    "skyfield",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
lss = [
    "hankel",
    "hankl",
    "pyfftlog",
]
docs = ["Sphinx", "sphinx_rtd_theme"]
lint = ["black"]
test = ["pytest"]

[project.urls]
Repository = "https://github.com/radiocosmology/cora"

[project.scripts]
cora-makesky = "cora.scripts.makesky:cli"

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
"cora.signal" = ["data/ps_z1.5.dat", "data/corr_z1.5.dat", "data/ps*.h5"]
"cora.foreground" = ["data/skydata.npz", "data/combinedps.dat"]
